--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "react": "^16.13.1",
     "react-delay-link": "^1.1.4",
     "react-dom": "^16.13.1",
+    "react-draggable": "^4.3.1",
     "react-grid-system": "^6.3.0",
     "react-icons-kit": "^1.3.1",
     "react-loadingg": "^1.7.2",
