--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,6 @@
     "react": "^16.13.1",
     "react-delay-link": "^1.1.4",
     "react-dom": "^16.13.1",
-    "react-draggable": "^4.3.1",
     "react-grid-system": "^6.3.0",
     "react-icons-kit": "^1.3.1",
     "react-loadingg": "^1.7.2",
@@ -17,9 +16,7 @@
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
-    "redux": "^4.0.5",
-    "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^0.88.2"
+    "redux": "^4.0.5"
   },
   "homepage": "./",
   "main": "public/electron.js",
