--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "custom-electron-titlebar": "^3.2.2-hotfix62",
     "electron-is-dev": "^1.1.0",
     "react": "^16.13.1",
     "react-delay-link": "^1.1.4",
